syntax = "proto3";
package secret.tss.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/scrtlabs/SecretNetwork/x/tss/types";

// Params defines the module parameters
message Params {
  option (gogoproto.equal) = true;
}

// KeySetStatus defines the status of a KeySet
enum KeySetStatus {
  KEY_SET_STATUS_UNSPECIFIED = 0;
  KEY_SET_STATUS_PENDING_DKG = 1;
  KEY_SET_STATUS_ACTIVE = 2;
  KEY_SET_STATUS_FAILED = 3;
}

// DKGState defines the state of a DKG session
enum DKGState {
  DKG_STATE_UNSPECIFIED = 0;
  DKG_STATE_ROUND1 = 1;
  DKG_STATE_ROUND2 = 2;
  DKG_STATE_KEY_SUBMISSION = 3;  // Validators submit encrypted key shares
  DKG_STATE_COMPLETE = 4;
  DKG_STATE_FAILED = 5;
}

// SigningState defines the state of a signing session
enum SigningState {
  SIGNING_STATE_UNSPECIFIED = 0;
  SIGNING_STATE_ROUND1 = 1;
  SIGNING_STATE_ROUND2 = 2;
  SIGNING_STATE_COMPLETE = 3;
  SIGNING_STATE_FAILED = 4;
}

// SigningRequestStatus defines the status of a signing request
enum SigningRequestStatus {
  SIGNING_REQUEST_STATUS_UNSPECIFIED = 0;
  SIGNING_REQUEST_STATUS_PENDING = 1;
  SIGNING_REQUEST_STATUS_ROUND1 = 2;
  SIGNING_REQUEST_STATUS_ROUND2 = 3;
  SIGNING_REQUEST_STATUS_COMPLETE = 4;
  SIGNING_REQUEST_STATUS_FAILED = 5;
}

// KeySet represents a threshold signature key set
message KeySet {
  string id = 1;
  string owner = 2;
  uint32 threshold = 3;
  uint32 max_signers = 4;
  repeated string participants = 5;
  bytes group_pubkey = 6;
  KeySetStatus status = 7;
  string description = 8;
  int64 created_height = 9;
}

// KeyShare represents a validator's share of a threshold key
// The secret share is encrypted with the validator's public key (Ed25519â†’X25519)
message KeyShare {
  string key_set_id = 1;
  string validator_address = 2;
  bytes share_data = 3;  // Metadata/reference (deprecated, kept for compatibility)
  bytes group_pubkey = 4;
  int64 created_height = 5;
  // Encrypted FROST secret share (NaCl box sealed with validator's X25519 pubkey)
  bytes encrypted_secret_share = 6;
  // Encrypted FROST public shares (NaCl box sealed with validator's X25519 pubkey)
  bytes encrypted_public_shares = 7;
  // Ephemeral public key used for encryption (needed for decryption)
  bytes ephemeral_pubkey = 8;
}

// DKG Session and Round data
message DKGSession {
  string id = 1;
  string key_set_id = 2;
  DKGState state = 3;
  uint32 threshold = 4;
  uint32 max_signers = 5;
  repeated string participants = 6;
  int64 start_height = 7;
  int64 timeout_height = 8;
}

message DKGRound1Data {
  string validator_address = 1;
  bytes commitment = 2;
  int64 submitted_height = 3;
}

message DKGRound2Data {
  string validator_address = 1;
  bytes share = 2;
  int64 submitted_height = 3;
}

// DKGKeySubmission contains a validator's encrypted secret share for on-chain storage
message DKGKeySubmission {
  string validator_address = 1;
  // Encrypted FROST secret share (NaCl box sealed with validator's X25519 pubkey)
  bytes encrypted_secret_share = 2;
  // Encrypted FROST public shares (NaCl box sealed with validator's X25519 pubkey)
  bytes encrypted_public_shares = 3;
  // Ephemeral public key used for encryption (needed for decryption)
  bytes ephemeral_pubkey = 4;
  int64 submitted_height = 5;
}

// Signing Request and Session data
message SigningRequest {
  string id = 1;
  string key_set_id = 2;
  string requester = 3;
  bytes message_hash = 4;
  string callback = 5;
  SigningRequestStatus status = 6;
  bytes signature = 7;
  int64 created_height = 8;
}

message SigningSession {
  string request_id = 1;
  string key_set_id = 2;
  uint32 threshold = 3;
  repeated string participants = 4;
  SigningState state = 5;
  int64 start_height = 6;
  int64 timeout_height = 7;
}

message SigningCommitment {
  string validator_address = 1;
  bytes commitment = 2;
  int64 submitted_height = 3;
}

message SignatureShare {
  string validator_address = 1;
  bytes share = 2;
  int64 submitted_height = 3;
}
